--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
 
 body {
   background: var(--bg-url) no-repeat top center/cover;
-
+  height: 100vh;
 }
 
 body * {
@@ -73,18 +73,16 @@ body * {
   background: white var(--switch-bg-url) no-repeat center;
   border: 0;
   border-radius: 50%;
-
   position: absolute;
   top: 50%;
   left: 0;
   z-index: 1;
   transform: translateY(-50%);
-
-  animation: slide-back 0.2s;
+  animation: slide-back 0.4s;
 }
 
 .light #switch button {
-  animation: slide-in 0.2s forwards;
+  animation: slide-in 0.4s forwards;
 }
 
 #switch button:hover {
